// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic input 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`renders correctly for a disabled input 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    disabled=""
    type="text"
    value=""
  />
</div>
`;

exports[`renders correctly for an input with a after component 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4:focus:not(:focus-visible) {
  outline: none;
}

.c4.c4.c4 {
  position: absolute;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c5 {
  fill: #708da8;
  height: 2.5em;
  margin: 0 0.75em;
  top: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c7 {
  padding-right: 2.3em;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3 c4"
    style="right: 0px; z-index: 3;"
  >
    <svg
      class="c5 c6 c1"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 512 512"
    >
      <title>
        Search
      </title>
      <path
        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c7 c8"
    type="text"
    value=""
  />
</div>
`;

exports[`renders correctly for an input with a before component 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c4:focus:not(:focus-visible) {
  outline: none;
}

.c4.c4.c4 {
  position: absolute;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c6 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c5 {
  fill: #708da8;
  height: 2.5em;
  margin: 0 0.75em;
  top: 0;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c7[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7::-webkit-input-placeholder {
  opacity: 0.6;
}

.c7::-moz-placeholder {
  opacity: 0.6;
}

.c7:-ms-input-placeholder {
  opacity: 0.6;
}

.c7::placeholder {
  opacity: 0.6;
}

.c7 {
  padding-left: 2.3em;
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3 c4"
    style="z-index: 3;"
  >
    <svg
      class="c5 c6 c1"
      role="img"
      size="1"
      style="size: 1px;"
      viewBox="0 0 512 512"
    >
      <title>
        Search
      </title>
      <path
        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c7 c8"
    type="text"
    value=""
  />
</div>
`;

exports[`renders correctly for an input with a default value 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value="Awesome value"
  />
</div>
`;

exports[`renders correctly for an input with a placeholder 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    placeholder="Awesome placeholder"
    type="text"
    value=""
  />
</div>
`;

exports[`sizes renders correctly for an input with size large 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c0 {
  font-size: 1.5rem;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 + .c4 {
  top: 10px;
  right: 10px;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`sizes renders correctly for an input with size medium 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c0 {
  font-size: 1.25rem;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 + .c4 {
  top: 10px;
  right: 10px;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`sizes renders correctly for an input with size small 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c0 {
  font-size: 0.8rem;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 + .c4 {
  top: 8px;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`states renders correctly for an input with state danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #c9444d;
  box-shadow: #c9444d 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="true"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`states renders correctly for an input with state primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`states renders correctly for an input with state success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #2c8453;
  box-shadow: #2c8453 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`states renders correctly for an input with state warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #f2a100;
  box-shadow: #f2a100 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="text"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type date 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="date"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type email 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="email"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type number 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="number"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type password 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="password"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type search 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="search"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type tel 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="tel"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type time 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="time"
    value=""
  />
</div>
`;

exports[`types renders correctly for an input with type url 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 2.5em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <input
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    type="url"
    value=""
  />
</div>
`;
